syntax = "proto3";

message Server_information {
    optional string name = 1;
    optional string addr = 2;
}

message Client_information {
    optional string id = 1;
}

message Success {
    optional bool value = 1;
}

message Server_book {
    repeated Server_information servers = 1;
}

service Maintain {
    rpc RegisterServer (Server_information) returns (Success);
    rpc GetServerList (Client_information) returns (Server_book);
}
